--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -21,46 +21,53 @@
     </header>
 
     <main>
+      <section class="corps">  
+        <div class="titre">
+          <h1>La note enchantée</h1>
+          <i class="far fa-heart coeur"></i>
+          <i class="fas fa-heart plein"></i>
+        </div>
+
       <section class="repas">
         <h2>ENTRÉES</h2>
         <nav class="navbar">
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Ravioles de foie gras </p>
+                <p class="text_plat">Ravioles de foie gras </p>
                 <div class="text_2">
                   <p class="text_2_couper">Accompagnés de leurs créme a la truffe</p>
-                  <p class="textplat--modifier">25€</p>
+                  <p class="text_plat--modifier">25€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="text anim_2_clic">
+            <li class="anim_2_clic">
               <div>
-                <p class="textplat">Caviar osciétre</p>
+                <p class="text_plat">Caviar osciétre</p>
                 <div class="text_2">
                   <p class="text_2_couper">Sur blini a la farine de blé noir</p>
-                  <p class="textplat--modifier">35€</p>
+                  <p class="text_plat--modifier">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Homard et espuma de potiron</p>
+                <p class="text_plat">Homard et espuma de potiron</p>
                 <div class="text_2">
                   <p class="text_2_couper">Mariné aux zestes d'orange</p>
-                  <p class="textplat--modifier">20€</p>
+                  <p class="text_plat--modifier">20€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_4_clic">
               <div>
-                <p class="textplat">Foie gras de canrd cuit entier</p>
+                <p class="text_plat">Foie gras de canrd cuit entier</p>
                 <div class="text_2">
                   <p class="text_2_couper">Confiture de figue et pain toesté</p>
-                  <p class="textplat--modifier">35€</p>
+                  <p class="text_plat--modifier">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -74,30 +81,30 @@
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Noix de coquilles saint-jacques</p>
+                <p class="text_plat">Noix de coquilles saint-jacques</p>
                 <div class="text_2">
                   <p class="text_2_couper">Sur lit de purée de céleri-rave</p>
-                  <p class="textplat--modifier">40€</p>
+                  <p class="text_plat--modifier">40€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2_clic">
               <div>
-                <p class="textplat">Langoustine poêlée</p>
+                <p class="text_plat">Langoustine poêlée</p>
                 <div class="text_2">
                   <p class="text_2_couper">Purée de patate douce</p>
-                  <p class="textplat--modifier">35€</p>
+                  <p class="text_plat--modifier">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Mijoté de queue de boeuf </p>
+                <p class="text_plat">Mijoté de queue de boeuf </p>
                 <div class="text_2">
                   <p class="text_2_couper">Et riz sauvage aux zestes de citron</p>
-                  <p class="textplat--modifier">44€</p>
+                  <p class="text_plat--modifier">44€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -111,30 +118,30 @@
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Macaron noisette et chocolat</p>
+                <p class="text_plat">Macaron noisette et chocolat</p>
                 <div class="text_2">
                   <p class="text_2_couper">Glace au caramel brun et sel de Guérande</p>
-                  <p class="textplat--modifier">18€</p>
+                  <p class="text_plat--modifier">18€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2_clic">
               <div>
-                <p class="textplat">Baba au rhum revisité</p>
+                <p class="text_plat">Baba au rhum revisité</p>
                 <div class="text_2">
                   <p class="text_2_couper">Avec son coulis de citron</p>
-                  <p class="textplat--modifier">22€</p>
+                  <p class="text_plat--modifier">22€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Tarte au citron meringuée </p>
+                <p class="text_plat">Tarte au citron meringuée </p>
                 <div class="text_2">
                   <p class="text_2_couper">Déstructurée</p>
-                  <p class="textplat--modifier">23€</p>
+                  <p class="text_plat--modifier">23€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -143,7 +150,7 @@
         </nav>
       </section>
       <a class="button" href="#">Commander</a>
-      </section>
+    </section>
     </main>
 
     <footer>
