--- a/menu/menu4.html
+++ b/menu/menu4.html
@@ -22,36 +22,43 @@
 
 
     <main>
+      <section class="corps">  
+        <div class="titre">
+          <h1>Le delice des sens</h1>
+          <i class="far fa-heart coeur"></i>
+          <i class="fas fa-heart plein"></i>
+        </div>
+
       <section class="repas">
         <h2>ENTRÉES</h2>
         <nav class="navbar">
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Tartare de thon</p>
+                <p class="text_plat">Tartare de thon</p>
                 <div class="text_2">
                   <p class="text_2_couper">Assaisonné au yuzu</p>
-                  <p class="textplat--modifier">25€</p>
+                  <p class="text_plat--modifier">25€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="text anim_2_clic">
+            <li class="anim_2_clic">
               <div>
-                <p class="textplat">Bouchée de homard croustillant</p>
+                <p class="text_plat">Bouchée de homard croustillant</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et sa farandole de petit légumes</p>
-                  <p class="textplat--modifier">35€</p>
+                  <p class="text_plat--modifier">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Velouté de cépes</p>
+                <p class="text_plat">Velouté de cépes</p>
                 <div class="text_2">
                   <p class="text_2_couper">Aux truffes</p>
-                  <p class="textplat--modifier">20€</p>
+                  <p class="text_plat--modifier">20€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -65,30 +72,30 @@
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Poulet  roti aux herbes de provence</p>
+                <p class="text_plat">Poulet  roti aux herbes de provence</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et sa créme de truffe</p>
-                  <p class="textplat--modifier">40€</p>
+                  <p class="text_plat--modifier">40€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2_clic">
               <div>
-                <p class="textplat">Langouste rotie</p>
+                <p class="text_plat">Langouste rotie</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et ses légumes de saison</p>
-                  <p class="textplat--modifier">35€</p>
+                  <p class="text_plat--modifier">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Cote de boeuf Angus</p>
+                <p class="text_plat">Cote de boeuf Angus</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et sa purée de panais</p>
-                  <p class="textplat--modifier">44€</p>
+                  <p class="text_plat--modifier">44€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -102,30 +109,30 @@
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Farandole de desserts</p>
+                <p class="text_plat">Farandole de desserts</p>
                 <div class="text_2">
                   <p class="text_2_couper">Du chef</p>
-                  <p class="textplat--modifier">18€</p>
+                  <p class="text_plat--modifier">18€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2_clic">
               <div>
-                <p class="textplat">Créme brulée</p>
+                <p class="text_plat">Créme brulée</p>
                 <div class="text_2">
                   <p class="text_2_couper">Revisité</p>
-                  <p class="textplat--modifier">22€</p>
+                  <p class="text_plat--modifier">22€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Tiramisu</p>
+                <p class="text_plat">Tiramisu</p>
                 <div class="text_2">
                   <p class="text_2_couper">A la noisette</p>
-                  <p class="textplat--modifier">23€</p>
+                  <p class="text_plat--modifier">23€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
