--- a/menu/menu3.html
+++ b/menu/menu3.html
@@ -22,36 +22,43 @@
 
     
     <main>
+      <section class="corps">  
+        <div class="titre">
+          <h1>A la francaise</h1>
+          <i class="far fa-heart coeur"></i>
+          <i class="fas fa-heart plein"></i>
+        </div>
+
       <section class="repas">
         <h2>ENTRÉES</h2>
         <nav class="navbar">
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Tartare de poulpe acidulé </p>
+                <p class="text_plat">Tartare de poulpe acidulé </p>
                 <div class="text_2">
                   <p class="text_2_couper">Aux zeste d'orange</p>
-                  <p class="textplat--modifier">25€</p>
+                  <p class="text_plat--modifier">25€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="text anim_2_clic">
+            <li class="anim_2_clic">
               <div>
-                <p class="textplat">Velouté de légumes d'antan</p>
+                <p class="text_plat">Velouté de légumes d'antan</p>
                 <div class="text_2">
                   <p class="text_2_couper">Carotte,panais,topimanbour</p>
-                  <p class="textplat--modifier">35€</p>
+                  <p class="text_plat--modifier">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Soupe a l'oignon</p>
+                <p class="text_plat">Soupe a l'oignon</p>
                 <div class="text_2">
                   <p class="text_2_couper">revisitée</p>
-                  <p class="textplat--modifier">20€</p>
+                  <p class="text_plat--modifier">20€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -65,30 +72,30 @@
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Coquilles Saint-jascques</p>
+                <p class="text_plat">Coquilles Saint-jascques</p>
                 <div class="text_2">
                   <p class="text_2_couper">Accompagnée d'une purée de panais</p>
-                  <p class="textplat--modifier">40€</p>
+                  <p class="text_plat--modifier">40€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2_clic">
               <div>
-                <p class="textplat">Magret de canard</p>
+                <p class="text_plat">Magret de canard</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et parmentier de pommes de terre</p>
-                  <p class="textplat--modifier">35€</p>
+                  <p class="text_plat--modifier">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Pigeonneau d'Ille-et-vilaine</p>
+                <p class="text_plat">Pigeonneau d'Ille-et-vilaine</p>
                 <div class="text_2">
                   <p class="text_2_couper">Sur son lit de gnocchis aux légumes</p>
-                  <p class="textplat--modifier">44€</p>
+                  <p class="text_plat--modifier">44€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -102,30 +109,30 @@
           <ul>
             <li class="anim_clic">
               <div>
-                <p class="textplat">Pétales de violettes glacés</p>
+                <p class="text_plat">Pétales de violettes glacés</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et purée de noisettes</p>
-                  <p class="textplat--modifier">18€</p>
+                  <p class="text_plat--modifier">18€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2_clic">
               <div>
-                <p class="textplat">Fondant au chocolat</p>
+                <p class="text_plat">Fondant au chocolat</p>
                 <div class="text_2">
                   <p class="text_2_couper">Revisité</p>
-                  <p class="textplat--modifier">22€</p>
+                  <p class="text_plat--modifier">22€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3_clic">
               <div>
-                <p class="textplat">Millefeuille croustillant</p>
+                <p class="text_plat">Millefeuille croustillant</p>
                 <div class="text_2">
                   <p class="text_2_couper">Myrtilles et pate d'amande</p>
-                  <p class="textplat--modifier">23€</p>
+                  <p class="text_plat--modifier">23€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
