maj accueil & menu footer

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 alt="Image la note enchantée">
               <figcaption class="img-m">
                 <div class="img_text">
-                  <h3 class="img_text-bold">La note enchantée</h3>
+                  <h3 class="img_text_bold">La note enchantée</h3>
                   <p>Charonne</p>
                 </div>
                 <i class="far fa-heart"></i>
@@ -103,7 +103,7 @@
                 alt="Image a la francaise">
               <figcaption class="img">
                 <div class="img_text">
-                  <h3 class="img_text-bold">A la francaise</h3>
+                  <h3 class="img_text_bold">A la francaise</h3>
                   <p>Cité rouge</p>
                 </div>
                 <i class="far fa-heart"></i>
@@ -121,7 +121,7 @@
                 alt="Image La palette du gout">
               <figcaption class="img">
                 <div class="img_text">
-                  <h3 class="text_bold">Le délice des sens</h3>
+                  <h3 class="img_text_bold">Le délice des sens</h3>
                   <p>Folie-Méricourt</p>
                 </div>
                 <i class="far fa-heart"></i>
