--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -153,7 +153,7 @@
     </section>
     </main>
 
-    <footer>
+    <footer class="enchante">
         <h3>ohmyfood</h3>
         <ul>
           <li>
