commentaire + ajout anim ligne menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <body>
 
+      <!--haut de page -->
 
     <header>
 
@@ -32,7 +33,9 @@
       </div>
     </header>
 
+    <!--corps de page -->
 
+      <!--menu nav -->
     <nav>
       <h2>Fonctionnement</h2>
       <ul>
@@ -56,6 +59,7 @@
 
       </ul>
     </nav>
+      <!--section menu -->
 
       <section id="resto">
         <h2> restaurants</h2>
@@ -133,6 +137,8 @@
         </div>
       </section>
     
+      <!-- pied de page -->
+
     <footer>
       <h3>ohmyfood</h3>
       <ul>
