--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -33,7 +33,7 @@
         <h2>ENTRÉES</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Fricassée d'escargot</p>
                 <div class="text_2">
@@ -43,7 +43,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Foie gras de canard mi-cuit</p>
                 <div class="text_2">
@@ -53,7 +53,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Oeuf au plat</p>
                 <div class="text_2">
@@ -70,7 +70,7 @@
         <h2>PLATS</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Filet de boeuf aux herbes</p>
                 <div class="text_2">
@@ -80,7 +80,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Parmentier de queue de boeuf</p>
                 <div class="text_2">
@@ -90,7 +90,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Filet de turbot</p>
                 <div class="text_2">
@@ -107,7 +107,7 @@
         <h2>DESSERTS</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Paris-Brest</p>
                 <div class="text_2">
@@ -117,7 +117,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Macaron au chocolat d'exception</p>
                 <div class="text_2">
@@ -127,7 +127,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Mousse au chocolat </p>
                 <div class="text_2">
