--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -32,7 +32,7 @@
         <h2>ENTRÉES</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Ravioles de foie gras </p>
                 <div class="text_2">
@@ -42,7 +42,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Caviar osciétre</p>
                 <div class="text_2">
@@ -52,7 +52,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Homard et espuma de potiron</p>
                 <div class="text_2">
@@ -62,7 +62,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_4_clic">
+            <li class="anim_4 clic">
               <div>
                 <p class="text_plat">Foie gras de canrd cuit entier</p>
                 <div class="text_2">
@@ -79,7 +79,7 @@
         <h2>PLATS</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Noix de coquilles saint-jacques</p>
                 <div class="text_2">
@@ -89,7 +89,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Langoustine poêlée</p>
                 <div class="text_2">
@@ -99,7 +99,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Mijoté de queue de boeuf </p>
                 <div class="text_2">
@@ -116,7 +116,7 @@
         <h2>DESSERTS</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Macaron noisette et chocolat</p>
                 <div class="text_2">
@@ -126,7 +126,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Baba au rhum revisité</p>
                 <div class="text_2">
@@ -136,7 +136,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Tarte au citron meringuée </p>
                 <div class="text_2">
