--- a/menu/menu4.html
+++ b/menu/menu4.html
@@ -33,7 +33,7 @@
         <h2>ENTRÉES</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Tartare de thon</p>
                 <div class="text_2">
@@ -43,7 +43,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Bouchée de homard croustillant</p>
                 <div class="text_2">
@@ -53,7 +53,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Velouté de cépes</p>
                 <div class="text_2">
@@ -70,7 +70,7 @@
         <h2>PLATS</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Poulet  roti aux herbes de provence</p>
                 <div class="text_2">
@@ -80,7 +80,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Langouste rotie</p>
                 <div class="text_2">
@@ -90,7 +90,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Cote de boeuf Angus</p>
                 <div class="text_2">
@@ -107,7 +107,7 @@
         <h2>DESSERTS</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Farandole de desserts</p>
                 <div class="text_2">
@@ -117,7 +117,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Créme brulée</p>
                 <div class="text_2">
@@ -127,7 +127,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Tiramisu</p>
                 <div class="text_2">
