--- a/menu/menu3.html
+++ b/menu/menu3.html
@@ -33,7 +33,7 @@
         <h2>ENTRÉES</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Tartare de poulpe acidulé </p>
                 <div class="text_2">
@@ -43,7 +43,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Velouté de légumes d'antan</p>
                 <div class="text_2">
@@ -53,7 +53,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Soupe a l'oignon</p>
                 <div class="text_2">
@@ -70,7 +70,7 @@
         <h2>PLATS</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Coquilles Saint-jascques</p>
                 <div class="text_2">
@@ -80,7 +80,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Magret de canard</p>
                 <div class="text_2">
@@ -90,7 +90,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Pigeonneau d'Ille-et-vilaine</p>
                 <div class="text_2">
@@ -107,7 +107,7 @@
         <h2>DESSERTS</h2>
         <nav class="navbar">
           <ul>
-            <li class="anim_clic">
+            <li class="anim clic">
               <div>
                 <p class="text_plat">Pétales de violettes glacés</p>
                 <div class="text_2">
@@ -117,7 +117,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_2_clic">
+            <li class="anim_2 clic">
               <div>
                 <p class="text_plat">Fondant au chocolat</p>
                 <div class="text_2">
@@ -127,7 +127,7 @@
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
-            <li class="anim_3_clic">
+            <li class="anim_3 clic">
               <div>
                 <p class="text_plat">Millefeuille croustillant</p>
                 <div class="text_2">
