--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
   <body>
 
+    <div class="spinner">
+      <span class="spinner-inner-1"></span>
+      <span class="spinner-inner-2"></span>
+      <span class="spinner-inner-3"></span>
+    </div>
+
       <!--haut de page -->
 
     <header>
