end spinner loading

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <body>
 
     <div class="spinner">
-      <span class="spinner-inner-1"></span>
-      <span class="spinner-inner-2"></span>
-      <span class="spinner-inner-3"></span>
-    </div>
+        <div class="spin-cercle-1"></div>
+        <div class="spin-cercle-2"></div>
+        <div class="spin-cercle-3"></div>
+  </div>
 
       <!--haut de page -->
 
