--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -38,7 +38,7 @@
                 <p class="text_plat">Fricassée d'escargot</p>
                 <div class="text_2">
                   <p class="text_2_couper">Au piment d'espelette</p>
-                  <p class="text_plat--modifier">25€</p>
+                  <p class="text_plat_prix">25€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -48,7 +48,7 @@
                 <p class="text_plat">Foie gras de canard mi-cuit</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et ses copeaux de truffe noire</p>
-                  <p class="text_plat--modifier">35€</p>
+                  <p class="text_plat_prix">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -58,7 +58,7 @@
                 <p class="text_plat">Oeuf au plat</p>
                 <div class="text_2">
                   <p class="text_2_couper">Assaisonné à la truffe sur lit de caviar</p>
-                  <p class="text_plat--modifier">20€</p>
+                  <p class="text_plat_prix">20€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -75,7 +75,7 @@
                 <p class="text_plat">Filet de boeuf aux herbes</p>
                 <div class="text_2">
                   <p class="text_2_couper">Accompagné de sa ribambelle de légumes</p>
-                  <p class="text_plat--modifier">40€</p>
+                  <p class="text_plat_prix">40€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -85,7 +85,7 @@
                 <p class="text_plat">Parmentier de queue de boeuf</p>
                 <div class="text_2">
                   <p class="text_2_couper">À la truffe noire sur sa purée de panais</p>
-                  <p class="text_plat--modifier">35€</p>
+                  <p class="text_plat_prix">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -95,7 +95,7 @@
                 <p class="text_plat">Filet de turbot</p>
                 <div class="text_2">
                   <p class="text_2_couper">Aux agrumes</p>
-                  <p class="text_plat--modifier">44€</p>
+                  <p class="text_plat_prix">44€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -112,7 +112,7 @@
                 <p class="text_plat">Paris-Brest</p>
                 <div class="text_2">
                   <p class="text_2_couper">Revisité</p>
-                  <p class="text_plat--modifier">18€</p>
+                  <p class="text_plat_prix">18€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -122,7 +122,7 @@
                 <p class="text_plat">Macaron au chocolat d'exception</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et glace à la vanille de Madagascar</p>
-                  <p class="text_plat--modifier">22€</p>
+                  <p class="text_plat_prix">22€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -132,7 +132,7 @@
                 <p class="text_plat">Mousse au chocolat </p>
                 <div class="text_2">
                   <p class="text_2_couper">Au piment d'Espelette et à la truffe noire</p>
-                  <p class="text_plat--modifier">23€</p>
+                  <p class="text_plat_prix">23€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
