--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -37,7 +37,7 @@
                 <p class="text_plat">Ravioles de foie gras </p>
                 <div class="text_2">
                   <p class="text_2_couper">Accompagnés de leurs créme a la truffe</p>
-                  <p class="text_plat--modifier">25€</p>
+                  <p class="text_plat_prix">25€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -47,7 +47,7 @@
                 <p class="text_plat">Caviar osciétre</p>
                 <div class="text_2">
                   <p class="text_2_couper">Sur blini a la farine de blé noir</p>
-                  <p class="text_plat--modifier">35€</p>
+                  <p class="text_plat_prix">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -57,7 +57,7 @@
                 <p class="text_plat">Homard et espuma de potiron</p>
                 <div class="text_2">
                   <p class="text_2_couper">Mariné aux zestes d'orange</p>
-                  <p class="text_plat--modifier">20€</p>
+                  <p class="text_plat_prix">20€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -67,7 +67,7 @@
                 <p class="text_plat">Foie gras de canrd cuit entier</p>
                 <div class="text_2">
                   <p class="text_2_couper">Confiture de figue et pain toesté</p>
-                  <p class="text_plat--modifier">35€</p>
+                  <p class="text_plat_prix">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -84,7 +84,7 @@
                 <p class="text_plat">Noix de coquilles saint-jacques</p>
                 <div class="text_2">
                   <p class="text_2_couper">Sur lit de purée de céleri-rave</p>
-                  <p class="text_plat--modifier">40€</p>
+                  <p class="text_plat_prix">40€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -94,7 +94,7 @@
                 <p class="text_plat">Langoustine poêlée</p>
                 <div class="text_2">
                   <p class="text_2_couper">Purée de patate douce</p>
-                  <p class="text_plat--modifier">35€</p>
+                  <p class="text_plat_prix">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -104,7 +104,7 @@
                 <p class="text_plat">Mijoté de queue de boeuf </p>
                 <div class="text_2">
                   <p class="text_2_couper">Et riz sauvage aux zestes de citron</p>
-                  <p class="text_plat--modifier">44€</p>
+                  <p class="text_plat_prix">44€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -121,7 +121,7 @@
                 <p class="text_plat">Macaron noisette et chocolat</p>
                 <div class="text_2">
                   <p class="text_2_couper">Glace au caramel brun et sel de Guérande</p>
-                  <p class="text_plat--modifier">18€</p>
+                  <p class="text_plat_prix">18€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -131,7 +131,7 @@
                 <p class="text_plat">Baba au rhum revisité</p>
                 <div class="text_2">
                   <p class="text_2_couper">Avec son coulis de citron</p>
-                  <p class="text_plat--modifier">22€</p>
+                  <p class="text_plat_prix">22€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -141,7 +141,7 @@
                 <p class="text_plat">Tarte au citron meringuée </p>
                 <div class="text_2">
                   <p class="text_2_couper">Déstructurée</p>
-                  <p class="text_plat--modifier">23€</p>
+                  <p class="text_plat_prix">23€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
