--- a/menu/menu4.html
+++ b/menu/menu4.html
@@ -38,7 +38,7 @@
                 <p class="text_plat">Tartare de thon</p>
                 <div class="text_2">
                   <p class="text_2_couper">Assaisonné au yuzu</p>
-                  <p class="text_plat--modifier">25€</p>
+                  <p class="text_plat_prix">25€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -48,7 +48,7 @@
                 <p class="text_plat">Bouchée de homard croustillant</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et sa farandole de petit légumes</p>
-                  <p class="text_plat--modifier">35€</p>
+                  <p class="text_plat_prix">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -58,7 +58,7 @@
                 <p class="text_plat">Velouté de cépes</p>
                 <div class="text_2">
                   <p class="text_2_couper">Aux truffes</p>
-                  <p class="text_plat--modifier">20€</p>
+                  <p class="text_plat_prix">20€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -75,7 +75,7 @@
                 <p class="text_plat">Poulet  roti aux herbes de provence</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et sa créme de truffe</p>
-                  <p class="text_plat--modifier">40€</p>
+                  <p class="text_plat_prix">40€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -85,7 +85,7 @@
                 <p class="text_plat">Langouste rotie</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et ses légumes de saison</p>
-                  <p class="text_plat--modifier">35€</p>
+                  <p class="text_plat_prix">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -95,7 +95,7 @@
                 <p class="text_plat">Cote de boeuf Angus</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et sa purée de panais</p>
-                  <p class="text_plat--modifier">44€</p>
+                  <p class="text_plat_prix">44€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -112,7 +112,7 @@
                 <p class="text_plat">Farandole de desserts</p>
                 <div class="text_2">
                   <p class="text_2_couper">Du chef</p>
-                  <p class="text_plat--modifier">18€</p>
+                  <p class="text_plat_prix">18€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -122,7 +122,7 @@
                 <p class="text_plat">Créme brulée</p>
                 <div class="text_2">
                   <p class="text_2_couper">Revisité</p>
-                  <p class="text_plat--modifier">22€</p>
+                  <p class="text_plat_prix">22€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -132,7 +132,7 @@
                 <p class="text_plat">Tiramisu</p>
                 <div class="text_2">
                   <p class="text_2_couper">A la noisette</p>
-                  <p class="text_plat--modifier">23€</p>
+                  <p class="text_plat_prix">23€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
