--- a/menu/menu3.html
+++ b/menu/menu3.html
@@ -38,7 +38,7 @@
                 <p class="text_plat">Tartare de poulpe acidulé </p>
                 <div class="text_2">
                   <p class="text_2_couper">Aux zeste d'orange</p>
-                  <p class="text_plat--modifier">25€</p>
+                  <p class="text_plat_prix">25€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -48,7 +48,7 @@
                 <p class="text_plat">Velouté de légumes d'antan</p>
                 <div class="text_2">
                   <p class="text_2_couper">Carotte,panais,topimanbour</p>
-                  <p class="text_plat--modifier">35€</p>
+                  <p class="text_plat_prix">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -58,7 +58,7 @@
                 <p class="text_plat">Soupe a l'oignon</p>
                 <div class="text_2">
                   <p class="text_2_couper">revisitée</p>
-                  <p class="text_plat--modifier">20€</p>
+                  <p class="text_plat_prix">20€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -75,7 +75,7 @@
                 <p class="text_plat">Coquilles Saint-jascques</p>
                 <div class="text_2">
                   <p class="text_2_couper">Accompagnée d'une purée de panais</p>
-                  <p class="text_plat--modifier">40€</p>
+                  <p class="text_plat_prix">40€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -85,7 +85,7 @@
                 <p class="text_plat">Magret de canard</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et parmentier de pommes de terre</p>
-                  <p class="text_plat--modifier">35€</p>
+                  <p class="text_plat_prix">35€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -95,7 +95,7 @@
                 <p class="text_plat">Pigeonneau d'Ille-et-vilaine</p>
                 <div class="text_2">
                   <p class="text_2_couper">Sur son lit de gnocchis aux légumes</p>
-                  <p class="text_plat--modifier">44€</p>
+                  <p class="text_plat_prix">44€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -112,7 +112,7 @@
                 <p class="text_plat">Pétales de violettes glacés</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et purée de noisettes</p>
-                  <p class="text_plat--modifier">18€</p>
+                  <p class="text_plat_prix">18€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -122,7 +122,7 @@
                 <p class="text_plat">Fondant au chocolat</p>
                 <div class="text_2">
                   <p class="text_2_couper">Revisité</p>
-                  <p class="text_plat--modifier">22€</p>
+                  <p class="text_plat_prix">22€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
@@ -132,7 +132,7 @@
                 <p class="text_plat">Millefeuille croustillant</p>
                 <div class="text_2">
                   <p class="text_2_couper">Myrtilles et pate d'amande</p>
-                  <p class="text_plat--modifier">23€</p>
+                  <p class="text_plat_prix">23€</p>
                 </div>
               </div>
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
